not_in_use/paperclip-k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperclip
  namespace: paperclip
spec:
  selector:
    app: paperclip
  ports:
    - port: 3100
      targetPort: 3100
